plugins {
    id 'net.minecraftforge.gradle' version '[5.1,5.2)'
    id 'maven-publish'
}

group = project.maven_group
version = project.mod_version

archivesBaseName = project.archives_base_name
sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

java {
    withSourcesJar()
}

minecraft {
    mappings channel: 'official', version: project.minecraft_version

    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.console.level', 'debug'
            property 'forge.logging.markers', 'REGISTRIES'
            mods {
                mkw {
                    source sourceSets.main
                }
            }
        }
    }
}

repositories {
    maven { url = 'https://maven.minecraftforge.net/' }
    mavenCentral()
}

dependencies {
    minecraft "net.minecraftforge:forge:${project.minecraft_version}-${project.forge_version}"
}

tasks.named('processResources', ProcessResources).configure {
    filteringCharset = 'UTF-8'

    def replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version          : forge_version,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_credits            : mod_credits,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('jar', Jar).configure {
    from(['LICENSE.md', 'COPYING.md', 'NOTICE.md', 'README.md']) {
        into 'META-INF'
    }
}

def releaseFiles = [
        tasks.named('jar'),
        tasks.named('sourcesJar')
]

tasks.register('generateReleaseChecksums') {
    group = 'distribution'
    description = 'Generates SHA-256 checksums for release jars.'
    dependsOn releaseFiles

    outputs.file(layout.buildDirectory.file('release/SHA256SUMS.txt'))

    doLast {
        def digest = java.security.MessageDigest.getInstance('SHA-256')
        def outputFile = layout.buildDirectory.file('release/SHA256SUMS.txt').get().asFile
        outputFile.parentFile.mkdirs()
        outputFile.text = releaseFiles.collect { provider ->
            def file = provider.get().archiveFile.get().asFile
            digest.reset()
            file.withInputStream { input ->
                byte[] buffer = new byte[8192]
                int read
                while ((read = input.read(buffer)) != -1) {
                    digest.update(buffer, 0, read)
                }
            }
            "${digest.digest().encodeHex()}  mods/${file.name}"
        }.join(System.lineSeparator()) + System.lineSeparator()
    }
}

tasks.register('releaseBundle', Zip) {
    group = 'distribution'
    description = 'Packages release jars, checksums, and legal notices.'
    dependsOn releaseFiles
    dependsOn tasks.named('generateReleaseChecksums')
    archiveFileName = "${archives_base_name}-${mod_version}-release.zip"
    destinationDirectory = layout.buildDirectory.dir('release')

    from(releaseFiles.collect { it.get().archiveFile }) {
        into 'mods'
    }
    from(layout.buildDirectory.file('release/SHA256SUMS.txt'))
    from(['README.md', 'NOTICE.md', 'LICENSE.md', 'COPYING.md', 'CHANGELOG.md', 'RELEASE.md'])
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
}
